kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maccas-graphql
  namespace: maccas-api
  annotations:
    secrets.infisical.com/auto-reload: "true"
spec:
  selector:
    matchLabels:
      app: maccas-graphql
  replicas: 2
  template:
    metadata:
      labels:
        app: maccas-graphql
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  name: maccas-graphql
              topologyKey: kubernetes.io/hostname
      containers:
        - name: maccas-graphql
          image: ghcr.io/accurate0/maccas-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maccas-event
  namespace: maccas-api
  annotations:
    secrets.infisical.com/auto-reload: "true"
spec:
  selector:
    matchLabels:
      app: maccas-event
  replicas: 1
  template:
    metadata:
      labels:
        app: maccas-event
    spec:
      containers:
        - name: maccas-event
          image: ghcr.io/accurate0/maccas-event:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maccas-batch
  namespace: maccas-api
  annotations:
    secrets.infisical.com/auto-reload: "true"
spec:
  selector:
    matchLabels:
      app: maccas-batch
  replicas: 1
  template:
    metadata:
      labels:
        app: maccas-batch
    spec:
      containers:
        - name: maccas-batch
          image: ghcr.io/accurate0/maccas-batch:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maccas-web
  namespace: maccas-api
  annotations:
    secrets.infisical.com/auto-reload: "true"
spec:
  selector:
    matchLabels:
      app: maccas-web
  replicas: 2
  template:
    metadata:
      labels:
        app: maccas-web
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  name: maccas-web
              topologyKey: kubernetes.io/hostname
      containers:
        - name: maccas-web
          image: ghcr.io/accurate0/maccas-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maccas-dashboard
  namespace: maccas-api
  annotations:
    secrets.infisical.com/auto-reload: "true"
spec:
  selector:
    matchLabels:
      app: maccas-dashboard
  replicas: 1
  template:
    metadata:
      labels:
        app: maccas-dashboard
    spec:
      containers:
        - name: maccas-dashboard
          image: ghcr.io/accurate0/maccas-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
