kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maccas-web
  namespace: maccas-api
spec:
  selector:
    app: maccas-web
  ports:
    - name: web
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: maccas-graphql
  namespace: maccas-api
spec:
  selector:
    app: maccas-graphql
  ports:
    - name: api
      protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: maccas-event
  namespace: maccas-api
spec:
  selector:
    app: maccas-event
  ports:
    - name: api
      protocol: TCP
      port: 8001
      targetPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: maccas-batch
  namespace: maccas-api
spec:
  selector:
    app: maccas-batch
  ports:
    - name: api
      protocol: TCP
      port: 8002
      targetPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: maccas-dashboard
  namespace: maccas-api
spec:
  selector:
    app: maccas-dashboard
  ports:
    - name: web
      protocol: TCP
      port: 3001
      targetPort: 3000
