kubernetes/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: graphql-maccas-route
  namespace: maccas-api
spec:
  hostnames:
    - graphql.maccas.one
  parentRefs:
    - name: shared-gateway
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - name: maccas-api
          port: 8000
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: maccas-web-route
  namespace: maccas-api
spec:
  hostnames:
    - maccas.one
  parentRefs:
    - name: shared-gateway
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - name: maccas-web
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
