kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maccas-api
  namespace: maccas-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/configuration-snippet: |
      real_ip_header CF-Connecting-IP;
spec:
  ingressClassName: nginx
  rules:
    - host: maccas.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maccas-web
                port:
                  name: web
    - host: dashboard.maccas.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maccas-dashboard
                port:
                  name: web
    - host: graphql.maccas.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maccas-graphql
                port:
                  name: api
    - host: batch.maccas.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maccas-batch
                port:
                  name: api
    - host: event.maccas.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maccas-event
                port:
                  name: api
  tls:
    - secretName: maccas-api-tls
      hosts:
        - maccas.one
    - secretName: dashboard-maccas-api-tls
      hosts:
        - dashboard.maccas.one
    - secretName: event-maccas-api-tls
      hosts:
        - event.maccas.one
    - secretName: batch-maccas-api-tls
      hosts:
        - batch.maccas.one
    - secretName: graphql-maccas-api-tls
      hosts:
        - graphql.maccas.one
